--- a/app.yaml
+++ b/app.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-application: paranhao69
+application: your-app-id-here
 version: gatracking
 runtime: python27
 api_version: 1
